tests/neg/i12456.scala
object F { type T[G[X] <: X, F <: G[F]] } // error // error
